@@ -1,3 +1,4 @@
+ - Add function normalize()
  - Integration with VMTK for reading DOLFIN XML meshes produced by VMTK
  - Extend mesh XML format to handle boundary indicators
  - Add support for attaching arbitrarily named data to meshes
